CustomObjects/objects/Delete_Record_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Field__c</fullName>
        <inlineHelpText>Account field api name, if there is no account field on the object, then use a relationship. e.x. SBQQ__Subscription__r.SBQQ__Account__c</inlineHelpText>
        <label>Account Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>Api name of object</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Order in which objects should be deleted</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Delete Record Mapping</label>
    <pluralLabel>Delete Record Mappings</pluralLabel>
</CustomObject>